[package]
name = "trustify-module-ui"
version = "0.0.0-alpha.7"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-web-static-files = { workspace = true }
anyhow = { workspace = true }
trustify-ui = { workspace = true, optional = true }

[features]
default = [ "ui" ]
ui = ["trustify-ui"]
